add prawn-rails gem for pdf generate

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -153,6 +153,7 @@
         });
 
         $('#export_campaigns').click(function() {
+            console.log('you click on ' + $(this).val());
 
             if($('.squaredFour input:checked').length)
             {
