add debug log for export report

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -153,7 +153,7 @@
         });
 
         $('#export_campaigns').click(function() {
-            console.log('you click on ' + $(this).val());
+            console.log('you click on ' + $(this));
 
             if($('.squaredFour input:checked').length)
             {
