influencer campaign pdf report complete

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -8,9 +8,9 @@
     <li class="dropdown btn btn-export button-border-yellow">
       <a href="#" class="dropdown-toggle text-white" data-toggle="dropdown">EXPORT <b class="caret"></b></a>
       <ul class="dropdown-menu" id="export_campaigns">
-        <li value="pdf"><a href="#">to PDF</a></li>
-        <li value="xls"><a href="#">to Excel</a></li>
-        <li value="csv"><a href="#">to CSV</a></li>
+        <li data-format="pdf" class="report-generate"><a href="#" target="_blank">to PDF</a></li>
+        <li data-format="xls" class="report-generate"><a href="#">to Excel</a></li>
+        <li data-format="csv" class="report-generate"><a href="#">to CSV</a></li>
       </ul>
     </li>
   </div>
@@ -152,9 +152,9 @@
             $(".EngagementCheckBox").prop('checked', $("#select_all_engagement input:checked").length);
         });
 
-        $('#export_campaigns').click(function() {
-            console.log('you click on ' + $(this));
-
+        $(".report-generate").click(function() {
+            var format =  $(this).data('format');
+            
             if($('.squaredFour input:checked').length)
             {
                 var campaign_ids = [];
@@ -162,7 +162,17 @@
                     campaign_ids.push($(this).data('id'));
                 });
 
-                window.location.href = "<%= export_campaigns_path(format: :xls) %>?campaign_ids=" + campaign_ids;
+                switch (format){
+                    case 'pdf':
+                        window.open("<%= export_campaigns_path(format: :pdf) %>?campaign_ids=" + campaign_ids, '_blank')
+                        break;
+                    case 'xls':
+                        window.location.href = "<%= export_campaigns_path(format: :xls) %>?campaign_ids=" + campaign_ids;
+                        break;
+                    case 'csv':
+                        window.location.href = "<%= export_campaigns_path(format: :csv) %>?campaign_ids=" + campaign_ids;
+                        break;
+                }
             }
             else
             {
