--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -122,8 +122,8 @@
                 $('.squaredFour input:checked').each(function () {
                     payment_ids.push($(this).data('id'));
                 });
-
-                window.location.href  = "<%= export_payments_path(format: :csv) %>?payment_ids=" + payment_ids;
+                console.log('called pdf generator ');
+                window.open("<%= export_payments_path(format: :pdf) %>?payment_ids=" + payment_ids, '_blank');
             }
             else
             {
