--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -34,6 +34,8 @@
 .payment-div {
     margin: 0px 20px 0px 20px;
     height: 40px;
+    position: relative;
+    z-index: 101;
 }
 
 .btn-download {
