add minimum one data has to be selected

--- a/app/views/campaigns/influencer_campaign.html.erb
+++ b/app/views/campaigns/influencer_campaign.html.erb
@@ -154,7 +154,7 @@
         $(".report-generate").click(function() {
             var format =  $(this).data('format');
 //            
-            if(true)
+            if($('.squaredFour input:checked').length)
             {
                 var campaign_ids = [];
                 $('.squaredFour input:checked').each(function() {
