--- a/app/views/payments/brand_index.html.erb
+++ b/app/views/payments/brand_index.html.erb
@@ -81,7 +81,7 @@
         });
 
         $('.report-generate').click(function() {
-            if(true)
+            if($('.squaredFour input:checked').length)
             {
                 var payment_ids = [];
                 $('.squaredFour input:checked').each(function() {
