--- a/app/views/payments/influencer_index.html.erb
+++ b/app/views/payments/influencer_index.html.erb
@@ -125,7 +125,7 @@
         });
 
         $('.report-generate').click(function () {
-            if(true)
+            if($('.squaredFour input:checked').length)
             {
                 var payment_ids = [];
                 $('.squaredFour input:checked').each(function () {
