--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -54,7 +54,7 @@
               <div class="form-group" id="post-type-0">
                 <%= f.label :campaign_content, 'Status Message', class: 'control-label' %>
                 <div class="display-inline">
-                  <%= f.text_field :campaign_content, class: 'form-control', name: 'status_message' %>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img', name: 'status_message' %>
                 </div>
               </div>
 
@@ -64,7 +64,7 @@
                   <span class="glyphicon glyphicon-camera image-icon" title="Add Image" id="upload-profile-photo"></span>
 
                 <div class="display-inline">
-                  <%= f.text_field :campaign_content, class: 'form-control ' , name: 'profile_photo_url' %>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img' , name: 'profile_photo_url' %>
                 </div>
               </div>
 
@@ -74,7 +74,7 @@
                 <span class="glyphicon glyphicon-camera image-icon" title="Add Image" id="upload-cover-photo"></span>
 
                 <div class="display-inline">
-                  <%= f.text_field :campaign_content, class: 'form-control', name: 'cover_photo_url' %>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img', name: 'cover_photo_url' %>
                 </div>
               </div>
 
@@ -82,7 +82,7 @@
               <div class="form-group" id="post-type-3">
                 <%= f.label :campaign_content, 'Video URL', class: 'control-label' %>
                 <div class="display-inline">
-                  <%= f.text_field :campaign_content, class: 'form-control', name: 'video_url' %>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img', name: 'video_url' %>
                 </div>
               </div>
 
@@ -92,7 +92,7 @@
                 <span class="glyphicon glyphicon-camera image-icon" title="Add Image" id="upload-cover-photo"></span>
 
                 <div class="display-inline">
-                  <%= f.text_field :campaign_content, class: 'form-control', name: 'photo_url' %>
+                  <%= f.text_field :campaign_content, class: 'form-control input-with-img', name: 'photo_url' %>
                 </div>
               </div>
 
