--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -303,5 +303,36 @@
         $('#upload-cover-photo').click(function(){
             $('#campaign-cover-photo').click();
         });
+
+        $('.add_image').fileupload({
+            dataType: "script",
+            add: function (e, data) {
+                var vals = Object.keys(data).map(function(key){
+                    return data[key];
+                });
+
+                var file, types;
+                types = /(\.|\/)(gif|jpe?g|png)$/i;
+                file = data.files[0];
+                if (types.test(file.type) || types.test(file.name)) {
+                    $('.image-loading-message').show();
+                    $('.loading-indicator').show();
+                    return data.submit();
+                } else {
+                    return alert("" + file.name + " is not a valid format!");
+                }
+            },
+            progress: function (e, data) {
+                var progress;
+                if (data.context) {
+                    progress = parseInt(data.loaded / data.total * 100, 10);
+                    return data.context.find('.bar').css('width', progress + '%');
+                }
+            },
+            stop: function (e, data) {
+                $('.loading-indicator').hide();
+                $('.image-loading-message').hide();
+            }
+        });
     })
 </script>
