--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
   <%= yield :head %>
 </head>
 <body class="skin-blue sidebar-mini">
-<div class="navbar navbar-fixed-top flash-less-width" id="image-loading-message">
-  <div id="loading-indicator">
+<div class="navbar navbar-fixed-top flash-less-width image-loading-message">
+  <div class="loading-indicator">
     <span id="loader_img"><i class="fa fa-spinner"></i></span> Image loading. Please wait....
   </div>
 </div>
