--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1213,9 +1213,9 @@ h5, .h5 {
   max-width: 90%;
 }
 
-.message-image{
-  height: 100px;
-  width: 100px;
+.preview-img, .message-image{
+  height: 120px;
+  width: 120px;
 }
 
 
@@ -1432,11 +1432,7 @@ a .offer-box:last-child{
 
 .single-image-wrap{
   display: inline-block;
-  margin-right: 10px;
-}
-
-.preview-img{
-  height: 75px;
+  margin:5px 10px 0 0;
 }
 
 .image-rem{
@@ -1445,8 +1441,8 @@ a .offer-box:last-child{
   font-size: 2.4em;
   font-weight: 100;
   height: 20px;
-  margin-left: -12px;
-  margin-top: -14px;
+  margin-left: -15px;
+  margin-top: -23px;
   opacity: 1.5;
   vertical-align: top;
 }
