password reset input field design issues solved  minimum password length set to 6 character

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -10,7 +10,7 @@
         <input class="login_input" id="user_password" type="password" name="user[password]" autocomplete="off" autofocus="autofocus" data-parsley-required="true" data-parsley-trigger="change">
       </div>
       <div class="input_container">
-        <div class="label_l">Confirm new password</div>
+        <div class="label_l">Confirm password</div>
         <input class="login_input" id="user_password_confirmation" type="password" name="user[password_confirmation]" autocomplete="off" data-parsley-required="true" data-parsley-trigger="change">
       </div>
 
