--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -315,6 +315,15 @@
                 types = /(\.|\/)(gif|jpe?g|png)$/i;
                 file = data.files[0];
                 if (types.test(file.type) || types.test(file.name)) {
+                    // file size in MB
+                    var file_size = file.size / 1048576 ;
+                    // set max image size to 3 mb
+                    console.log('Upload image size is ' + file_size + 'MB');
+                    if( file_size > 3){
+                        return bootbox.alert({ message: 'Image size is too long. Max size is 3 MB.',
+                            closeButton: false});
+                    }
+                    
                     $('.image-loading-message').show();
                     $('.loading-indicator').show();
                     return data.submit();
