solve parsely error message  display issues for profile image upload on profile page

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -477,7 +477,7 @@ div.awesomplete > ul > li[aria-selected="true"] {
     text-align: left;
 }
 
-.parsley-errors-list {
+.personal-info-form .parsley-errors-list {
     margin: -8px 0 10px;
 }
 
